# CARLA_ROS2_MPC

./: .gitattributes  README.md
catkin_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
catkin_ws/install/carla_ackermann_control/share/carla_ackermann_control/: carla_ackermann_control.launch.py  carla_ros_bridge_with_ackermann_control.launch.py  package.sh  package.xml  settings.yaml
catkin_ws/install/carla_ackermann_msgs/share/carla_ackermann_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
catkin_ws/install/carla_ad_agent/share/carla_ad_agent/: carla_ad_agent.launch.py  package.sh  package.xml
catkin_ws/install/carla_ad_demo/share/carla_ad_demo/: carla_ad_demo.launch  carla_ad_demo_with_scenario.launch  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
catkin_ws/install/carla_common/share/carla_common/: package.sh  package.xml
catkin_ws/install/carla_manual_control/share/carla_manual_control/: carla_manual_control.launch.py  package.sh  package.xml
catkin_ws/install/carla_msgs/share/carla_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
catkin_ws/install/mpc_ros/lib/mpc_ros/: carla_map_visualization  (+3 more)
catkin_ws/log/: latest_build
catkin_ws/src/carla-ros-bridge/: Untitled Document 5
catkin_ws/src/carla-ros-bridge/carla_ros_bridge/: package.xml  setup.py
catkin_ws/src/carla-ros-bridge/carla_spawn_objects/: setup.py
catkin_ws/src/mpc_ros/: package.xml  setup.cfg  setup.py
catkin_ws/src/mpc_ros/configure/: config.yaml
catkin_ws/src/mpc_ros/launch/: mpc_Town04.launch.py
catkin_ws/src/mpc_ros/mpc_ros/: carla_map_visualization.py  config.yaml  mpc_Town04.py  plot_mpc_data.py  static_waypoint_publisher.py
catkin_ws/src/mpc_ros/mpc_ros/mpc/: mpc_path_tracking.py
catkin_ws/src/mpc_ros/mpc_ros/utils/: curve_generator.py
(+801 files in other folders)
